--- a/Application/ui/uregisternewrequest.ui
+++ b/Application/ui/uregisternewrequest.ui
@@ -17,7 +17,7 @@
    <string>Ведите данные для регистрации новой заявки</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="Res.qrc">
+   <iconset resource="../Res.qrc">
     <normaloff>:/icons/Icons/new.ico</normaloff>:/icons/Icons/new.ico</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -196,7 +196,7 @@
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="Res.qrc">
+               <iconset resource="../Res.qrc">
                 <normaloff>:/icons/Icons/id_card.ico</normaloff>:/icons/Icons/id_card.ico</iconset>
               </property>
               <property name="iconSize">
@@ -467,7 +467,7 @@
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="Res.qrc">
+               <iconset resource="../Res.qrc">
                 <normaloff>:/icons/Icons/home_outline.ico</normaloff>:/icons/Icons/home_outline.ico</iconset>
               </property>
               <property name="iconSize">
@@ -575,7 +575,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="Res.qrc"/>
+  <include location="../Res.qrc"/>
  </resources>
  <connections>
   <connection>
