--- a/Application/ui/ueditrequest.ui
+++ b/Application/ui/ueditrequest.ui
@@ -1,30 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>URegisterNewRequest</class>
- <widget class="QDialog" name="URegisterNewRequest">
-  <property name="windowModality">
-   <enum>Qt::WindowModal</enum>
-  </property>
+ <class>ueditrequest</class>
+ <widget class="QDialog" name="ueditrequest">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>425</height>
+    <width>671</width>
+    <height>504</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Ведите данные для регистрации новой заявки</string>
-  </property>
-  <property name="windowIcon">
-   <iconset resource="../Res.qrc">
-    <normaloff>:/icons/Icons/new.ico</normaloff>:/icons/Icons/new.ico</iconset>
+   <string>Dialog</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_6">
    <item>
     <layout class="QHBoxLayout" name="lay_MainHor" stretch="0,1">
      <item>
       <layout class="QVBoxLayout" name="lay_LeftVert">
+       <item>
+        <widget class="QGroupBox" name="gbox_ID">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>50</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>9</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+           <underline>true</underline>
+          </font>
+         </property>
+         <property name="title">
+          <string>№ заявки:</string>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <property name="topMargin">
+           <number>1</number>
+          </property>
+          <property name="bottomMargin">
+           <number>1</number>
+          </property>
+          <item>
+           <widget class="QLineEdit" name="ed_ID">
+            <property name="enabled">
+             <bool>true</bool>
+            </property>
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="font">
+             <font>
+              <pointsize>9</pointsize>
+              <weight>50</weight>
+              <bold>false</bold>
+              <underline>false</underline>
+             </font>
+            </property>
+            <property name="readOnly">
+             <bool>true</bool>
+            </property>
+            <property name="clearButtonEnabled">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="spacer_ID">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeType">
+             <enum>QSizePolicy::Expanding</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>55</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </widget>
+       </item>
        <item>
         <widget class="QGroupBox" name="gbox_Person">
          <property name="sizePolicy">
@@ -81,7 +146,7 @@
           <item>
            <layout class="QHBoxLayout" name="lay_PersonHor">
             <item>
-             <widget class="QPushButton" name="btn_AddPerson">
+             <widget class="QPushButton" name="btn_AddEdit">
               <property name="minimumSize">
                <size>
                 <width>0</width>
@@ -325,7 +390,7 @@
              </spacer>
             </item>
             <item>
-             <widget class="QPushButton" name="btn_AddObject">
+             <widget class="QPushButton" name="btn_ObjectAdd">
               <property name="minimumSize">
                <size>
                 <width>0</width>
@@ -366,21 +431,10 @@
           </item>
           <item>
            <widget class="QTextEdit" name="txt_Adress">
-            <property name="font">
-             <font>
-              <pointsize>9</pointsize>
-              <weight>50</weight>
-              <bold>false</bold>
-              <underline>false</underline>
-             </font>
-            </property>
             <property name="tabChangesFocus">
              <bool>true</bool>
             </property>
             <property name="documentTitle">
-             <string/>
-            </property>
-            <property name="placeholderText">
              <string/>
             </property>
            </widget>
@@ -436,9 +490,6 @@
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="layoutDirection">
-      <enum>Qt::LeftToRight</enum>
-     </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -449,14 +500,12 @@
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="../Res.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>URegisterNewRequest</receiver>
+   <receiver>ueditrequest</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -472,7 +521,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>URegisterNewRequest</receiver>
+   <receiver>ueditrequest</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
