--- a/Application/ui/uregisternewrequest.ui
+++ b/Application/ui/uregisternewrequest.ui
@@ -20,7 +20,7 @@
    <iconset resource="../Res.qrc">
     <normaloff>:/icons/Icons/new.ico</normaloff>:/icons/Icons/new.ico</iconset>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_6">
+  <layout class="QVBoxLayout" name="verticalLayout_4">
    <item>
     <layout class="QHBoxLayout" name="lay_MainHor" stretch="0,1">
      <item>
@@ -81,7 +81,7 @@
           <item>
            <layout class="QHBoxLayout" name="lay_PersonHor">
             <item>
-             <widget class="QPushButton" name="btn_AddPerson">
+             <widget class="QPushButton" name="btn_ClearPerson">
               <property name="minimumSize">
                <size>
                 <width>0</width>
@@ -97,7 +97,7 @@
                </font>
               </property>
               <property name="text">
-               <string>Добавить</string>
+               <string>Сбросить</string>
               </property>
              </widget>
             </item>
@@ -193,53 +193,6 @@
         </widget>
        </item>
        <item>
-        <widget class="QGroupBox" name="gbox_Date">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>50</height>
-          </size>
-         </property>
-         <property name="font">
-          <font>
-           <pointsize>9</pointsize>
-           <weight>75</weight>
-           <bold>true</bold>
-           <underline>true</underline>
-          </font>
-         </property>
-         <property name="title">
-          <string>Дата:</string>
-         </property>
-         <layout class="QVBoxLayout" name="verticalLayout_4">
-          <property name="topMargin">
-           <number>1</number>
-          </property>
-          <property name="bottomMargin">
-           <number>1</number>
-          </property>
-          <item>
-           <widget class="QDateEdit" name="ed_Date">
-            <property name="font">
-             <font>
-              <pointsize>9</pointsize>
-              <weight>50</weight>
-              <bold>false</bold>
-              <underline>false</underline>
-             </font>
-            </property>
-            <property name="readOnly">
-             <bool>true</bool>
-            </property>
-            <property name="accelerated">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item>
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -287,7 +240,70 @@
          <property name="checkable">
           <bool>false</bool>
          </property>
-         <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,0,0,1,0">
+         <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,0,0,0,1,0">
+          <property name="spacing">
+           <number>6</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QGroupBox" name="gb_ObjFilter">
+            <property name="title">
+             <string>Фильтр:</string>
+            </property>
+            <layout class="QHBoxLayout" name="horizontalLayout">
+             <property name="spacing">
+              <number>6</number>
+             </property>
+             <property name="leftMargin">
+              <number>2</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>2</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
+             <item>
+              <widget class="QRadioButton" name="rb_ObjAll">
+               <property name="font">
+                <font>
+                 <pointsize>9</pointsize>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                 <underline>false</underline>
+                </font>
+               </property>
+               <property name="text">
+                <string>Все объекты</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="rb_ObjPerson">
+               <property name="font">
+                <font>
+                 <pointsize>9</pointsize>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                 <underline>false</underline>
+                </font>
+               </property>
+               <property name="text">
+                <string>По Заказчику</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
           <item>
            <widget class="QComboBox" name="cb_Object">
             <property name="minimumSize">
@@ -325,7 +341,7 @@
              </spacer>
             </item>
             <item>
-             <widget class="QPushButton" name="btn_AddObject">
+             <widget class="QPushButton" name="btn_ClearObj">
               <property name="minimumSize">
                <size>
                 <width>0</width>
@@ -341,7 +357,7 @@
                </font>
               </property>
               <property name="text">
-               <string>Добавить</string>
+               <string>Сбросить</string>
               </property>
              </widget>
             </item>
