--- a/Application/ui/pgrequestwizard.ui
+++ b/Application/ui/pgrequestwizard.ui
@@ -1,27 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>pgPersonWizard</class>
- <widget class="QWizardPage" name="pgPersonWizard">
+ <class>pgRequestWizard</class>
+ <widget class="QWizardPage" name="pgRequestWizard">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>484</width>
+    <height>325</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>WizardPage</string>
   </property>
-  <property name="title">
-   <string>Добавление / выбор заказчика</string>
-  </property>
-  <property name="subTitle">
-   <string/>
-  </property>
-  <attribute name="pageId">
-   <string notr="true">1</string>
-  </attribute>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
     <layout class="QVBoxLayout" name="vl_CurrentPage">
@@ -38,13 +29,14 @@
          <pointsize>10</pointsize>
          <weight>75</weight>
          <bold>true</bold>
+         <kerning>true</kerning>
         </font>
        </property>
        <property name="autoFillBackground">
         <bool>false</bool>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color:rgb(0, 0, 255); color:rgb(255, 255, 255)</string>
+        <string notr="true">color:rgb(0, 0, 0)</string>
        </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
@@ -71,6 +63,9 @@
          <weight>75</weight>
          <bold>true</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color:rgb(0, 0, 0)</string>
        </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
@@ -100,6 +95,9 @@
          <weight>75</weight>
          <bold>true</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color:rgb(0, 0, 255); color:rgb(255, 255, 255)</string>
        </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
@@ -137,9 +135,9 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_4">
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout_3">
+      <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QLabel" name="lbl_Person">
+        <widget class="QLabel" name="lbl_Type">
          <property name="font">
           <font>
            <pointsize>9</pointsize>
@@ -150,16 +148,12 @@
           </font>
          </property>
          <property name="text">
-          <string>ФИО заказчика:</string>
+          <string>Тип системы:</string>
          </property>
         </widget>
        </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QComboBox" name="cb_Person">
+        <widget class="QComboBox" name="cb_Type">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -169,34 +163,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pb_AddPerson">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>22</width>
-           <height>22</height>
-          </size>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="icon">
-          <iconset resource="../Res.qrc">
-           <normaloff>:/icons/Icons/register.ico</normaloff>:/icons/Icons/register.ico</iconset>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QVBoxLayout" name="verticalLayout">
-       <item>
-        <widget class="QLabel" name="lbl_Telephone">
+        <widget class="QLabel" name="lbl_Context">
          <property name="font">
           <font>
            <pointsize>9</pointsize>
@@ -206,29 +173,29 @@
           </font>
          </property>
          <property name="text">
-          <string>Телефонный номер:</string>
+          <string>Описание заявки:</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="ed_Telephon">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>22</height>
-          </size>
+        <widget class="QTextEdit" name="txt_Context">
+         <property name="font">
+          <font>
+           <pointsize>9</pointsize>
+           <weight>50</weight>
+           <bold>false</bold>
+          </font>
          </property>
          <property name="readOnly">
-          <bool>true</bool>
+          <bool>false</bool>
+         </property>
+         <property name="placeholderText">
+          <string>Введите описание заявки</string>
          </property>
         </widget>
        </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QLabel" name="lbl_Email">
+        <widget class="QLabel" name="lbl_Comment">
          <property name="font">
           <font>
            <pointsize>9</pointsize>
@@ -238,51 +205,46 @@
           </font>
          </property>
          <property name="text">
-          <string>Электронная почта:</string>
+          <string>Комментарий к заявке:</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="ed_Email">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>22</height>
-          </size>
+        <widget class="QTextEdit" name="txt_Comment">
+         <property name="font">
+          <font>
+           <pointsize>9</pointsize>
+           <weight>50</weight>
+           <bold>false</bold>
+          </font>
          </property>
          <property name="readOnly">
-          <bool>true</bool>
+          <bool>false</bool>
+         </property>
+         <property name="placeholderText">
+          <string>Введите комментарий к заявке</string>
          </property>
         </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="pb_SavePerson">
-         <property name="text">
-          <string>Добавить</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
+     </item>
+     <item>
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="../Res.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
