--- a/Application/ui/pgobjectwizard.ui
+++ b/Application/ui/pgobjectwizard.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>pgPersonWizard</class>
- <widget class="QWizardPage" name="pgPersonWizard">
+ <class>pgObjectWizard</class>
+ <widget class="QWizardPage" name="pgObjectWizard">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -14,13 +14,13 @@
    <string>WizardPage</string>
   </property>
   <property name="title">
-   <string>Добавление / выбор заказчика</string>
+   <string>Добавление / выбор объекта</string>
   </property>
   <property name="subTitle">
-   <string/>
+   <string>Выберете объект из базы данных</string>
   </property>
   <attribute name="pageId">
-   <string notr="true">1</string>
+   <string notr="true">2</string>
   </attribute>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
@@ -38,13 +38,14 @@
          <pointsize>10</pointsize>
          <weight>75</weight>
          <bold>true</bold>
+         <kerning>true</kerning>
         </font>
        </property>
        <property name="autoFillBackground">
         <bool>false</bool>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color:rgb(0, 0, 255); color:rgb(255, 255, 255)</string>
+        <string notr="true">color:rgb(0, 0, 0)</string>
        </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
@@ -71,6 +72,9 @@
          <weight>75</weight>
          <bold>true</bold>
         </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color:rgb(0, 0, 255); color:rgb(255, 255, 255)</string>
        </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
@@ -139,7 +143,7 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <item>
-        <widget class="QLabel" name="lbl_Person">
+        <widget class="QLabel" name="lbl_Object">
          <property name="font">
           <font>
            <pointsize>9</pointsize>
@@ -150,7 +154,7 @@
           </font>
          </property>
          <property name="text">
-          <string>ФИО заказчика:</string>
+          <string>Наименование объекта:</string>
          </property>
         </widget>
        </item>
@@ -159,7 +163,7 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QComboBox" name="cb_Person">
+        <widget class="QComboBox" name="cb_Object">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -169,7 +173,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pb_AddPerson">
+        <widget class="QPushButton" name="pb_Switch">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -196,7 +200,7 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QLabel" name="lbl_Telephone">
+        <widget class="QLabel" name="lbl_Address">
          <property name="font">
           <font>
            <pointsize>9</pointsize>
@@ -206,17 +210,18 @@
           </font>
          </property>
          <property name="text">
-          <string>Телефонный номер:</string>
+          <string>Адрес объекта:</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="ed_Telephon">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>22</height>
-          </size>
+        <widget class="QTextEdit" name="txt_Address">
+         <property name="font">
+          <font>
+           <pointsize>9</pointsize>
+           <weight>50</weight>
+           <bold>false</bold>
+          </font>
          </property>
          <property name="readOnly">
           <bool>true</bool>
@@ -226,56 +231,34 @@
       </layout>
      </item>
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout_2">
-       <item>
-        <widget class="QLabel" name="lbl_Email">
-         <property name="font">
-          <font>
-           <pointsize>9</pointsize>
-           <weight>75</weight>
-           <bold>true</bold>
-           <underline>true</underline>
-          </font>
-         </property>
-         <property name="text">
-          <string>Электронная почта:</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLineEdit" name="ed_Email">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>22</height>
-          </size>
-         </property>
-         <property name="readOnly">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="pb_SavePerson">
-         <property name="text">
-          <string>Добавить</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
+      <widget class="QPushButton" name="pb_AddObject">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Добавить</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
