--- a/Application/Res.qrc
+++ b/Application/Res.qrc
@@ -24,5 +24,6 @@
         <file>Icons/home_outline.ico</file>
         <file>Icons/addnewfile.ico</file>
         <file>Icons/edit.ico</file>
+        <file>Icons/req_accept.ico</file>
     </qresource>
 </RCC>
